--- a/mine.css
+++ b/mine.css
@@ -3,13 +3,45 @@
     margin: 0;
 }
 body{
-    width: 100vw;
-    height: 10vh;
+    width: 100%;
+    height: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background-color: #F4EBD0;
 }
 .first{
     width: 100%;
     height: 10vh;
-    background-color:aqua ;
+    background-color:#D6AD60;
+    position: fixed;
+    top: 0; 
+    left: 0; 
+    right: 0;
+}
+.nav-bar{
+    width: 100%;
+    height: auto;
+}
+.nav-bar ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 100%;
+    list-style: none;
+    background-color: #122620;
+    color: #F4EBD0;
+}
+.nav-bar li{
+    cursor: pointer;
+    padding: 2px;
+}
+.nav-bar li:hover{
+    border: 3px solid #F4EBD0;
+    border-radius: 2%;
+    border-top: 0px; border-bottom: 0px;
+    background-color: #D6AD60;
+    color: #122620;
+    font-weight: bold;
 }
 .head{
     width: 100%;    
@@ -20,58 +52,116 @@ body{
     align-self:flex-end;
 }
 .second{
+    padding-top: 15vh;
     width: 100%;
-    height: 80vh;
+    height: auto;
     display: flex;
     flex-direction: row;
-}
-.sidebar{
-    width: 15vw;
-    height: 80vh;
-}
-.sidebar ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 60vh;
-    list-style: none;
-}
-.other-side{
-    width: 85vw;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 .pic{
+    padding: 1em 0em 1em 0em;
     display: flex;
     flex-direction: row;
-    width: 85vw;
-    height: 70%;
+    width: 100%;
+    height: 70vh;
     justify-content: space-around;
+    background-color: #122620;
 }
-.d{
-    width: 40%; height: 60vh;
-    position: relative;
-}
-.d img{
-    width: 80%;
+
+.pic img{
+    border-radius: 50%;
+    width: 50%;
+    height: 100%;
     max-width: 100%;
-    height: auto;
     object-fit: contain;
 }
+
+.mylist{
+    background-color: #F4EBD0;
+    border-radius: 3%;
+    box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
+-webkit-box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
+-moz-box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
+}
 .mylist ul{
+    padding-top: 1em;
     width: 60%;
     height: 60vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+.third{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+}
+.cad-contain{
+    width: 100%;
+    padding-top: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.cad1 p, .cad2 p, .cad3 p{
+    cursor: pointer;
+    max-width: 400px;
+    min-height: 220px;
+    padding: 3px;
+    border: 1px solid #D6AD60;
+    border-radius: 3%;
+    box-shadow: -9px -3px 26px -5px rgba(0,0,0,0.81);
+-webkit-box-shadow: -9px -3px 26px -5px rgba(0,0,0,0.81);
+-moz-box-shadow: -9px -3px 26px -5px rgba(0,0,0,0.81);
+}
+.wave{
+    margin-top: 0.5em;
+    width: 100%;
+    height: 40px;
+    background-color: #122620;
+    animation: wavy 2s linear  infinite ;
+}
+.wave p{
+    text-align: center;
+    color: #D6AD60;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+@keyframes wavy {
+    0%{
+        transform: translateX(0);
+    }
+    20%{
+        transform: translateY(20%);
+    }
+    40%{
+        transform: translateX(0);
+    }
+    50%{
+        transform: translateY(60%);
+    }
+    100%{
+        transform: translateX(0%);
+    }
+    
 }
 .footer{
     width: 100%;
     height: 10vh;
-    background-color: rgb(86, 26, 26);
+    background-color: #B68D40;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-end;
+    position: fixed;
+    bottom: 0; 
+    left: 0; 
+    right: 0;
+}
+.handles span{
+    color: #ffffff;
+    cursor: pointer;
+}
+.handles span:hover{
+color:#122620;
 }
