--- a/pages/contac.css
+++ b/pages/contac.css
@@ -7,23 +7,26 @@ body{
 .contact-head{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 60%;
     justify-content: space-around;
     align-items: center;
+    margin: 1px auto;
 }
 .img img{
    max-width: 100px;
    max-height: 100px;
     border-radius: 50%;
-    object-fit: contain;
+    object-fit: cover;
 }
 .form{
     width: 60%;
-    height: auto;
+   min-height: 75vh ;
     margin: 1px auto;
     display: flex;
+    padding:0px 0px 5px 0px ;
     border-top-right-radius: 25%;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     box-shadow: 35px 2px 90px -20px rgb(214, 173, 96, 0.4) inset;
 -webkit-box-shadow: 35px 2px 90px -20px rgba(1, 10, 1, 0.47) inset;
@@ -33,20 +36,64 @@ body{
     width: 100%;
     height: 100%;
     background-color: transparent;
+    display: flex;
+    flex-direction: column;
 }.myform{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    height: 100%;
+    max-height: 100%;
 }
-.n{
+
+.n, .mess, .breif{
     width: 100%;
+    outline: none;
+    border: none;
 }
 .mess{
-    width: 100%;
     max-height: 150px;
+    outline: none;
+    resize: none;
 }
 .breif{
-    width: 100%;
    max-height: 120px;
+   outline: none;
+   resize: none;
+}
+.send{
+    cursor: pointer;
+    border: 0.2px solid #122620;
+    border-radius: 4px;
+    background-color: #F4EBD0;
+    color: #122620;
+    font-weight: bold;
+    animation: colorChange 5s ease-in-out 0.1s infinite alternate none;
+}
+@keyframes colorChange {
+    0%{
+            background-color: #122620;
+            color: #F4EBD0;
+    }10%{
+        background-color: #D6AD60;
+        color: #122620;
+    }30%{ 
+       background-color: #B68D40;
+        color: #ffffff;
+    }40%{
+    background-color: #000000;
+    color: #ffffff;
+    }50%{
+        background-color: #D6AD60;
+        color: #122620;
+    } 70%{
+        background-color: #040200;
+        color: #d78110;
+    } 90%{
+        background-color: #4eb640;
+        color: #ffffff;
+    } 100%{
+        
+    }
 }
