--- a/mine.css
+++ b/mine.css
@@ -2,9 +2,8 @@
     box-sizing: border-box;
     margin: 0;
 }
-body{
-    background-color: #F4EBD0;
-    display: flex;
+.container{
+    background: #ECF87F;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -18,17 +17,17 @@ body{
 .head{
     width: 100%;    
     max-height: 8vh;
-    color: #122620;
+    color: #3D550C;
 }
 .head h1{
     padding: 0.2em;
-    background-color:#D6AD60;
+    background-color:#dabd34;
     width: 100%;
     font-size: 2em;
     text-align: center;
 }
 .head h1::after{
-    color: #F4EBD0;
+    color: #f7f6f5;
     animation: changes 4s ease-in-out infinite  forwards;
     content: " Actual Page";
 }
@@ -52,7 +51,7 @@ body{
     justify-content: space-around;
     width: 100%;
     list-style: none;
-    background-color: #122620;
+    background-color: #3d550c;
     color: #F4EBD0;
 }
 .nav-bar li{
@@ -88,7 +87,7 @@ body{
     flex-direction: row;
     width: fit-content;
     max-height: 80vh;
-    background-color: #122620;
+    background-color: #3D550C;
 }
 
 .pic img{
@@ -130,11 +129,12 @@ body{
 .mylist{
     width: 60%;
     margin: 1px auto;
-    background-color: #F4EBD0;
-    border-top-right-radius: 7%;
-    box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
-    -webkit-box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
-    -moz-box-shadow: -3px -29px 61px -2px rgba(0,0,0,0.85) inset;
+    background-color: white;
+    border-top-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    box-shadow: -28px 200px 297px 65px rgba(231,209,7,0.75);
+    -webkit-box-shadow: -28px 200px 297px 65px rgba(231,209,7,0.75);
+    -moz-box-shadow: -28px 200px 297px 65px rgba(231,209,7,0.75);
 }
 .mylist ul{
     font-family: 'Roboto', sans-serif;
@@ -148,6 +148,9 @@ body{
     color: #B68D40;
     text-decoration: none;
     font-weight: bold;
+}
+.mylist b{
+    color: #3d550c;
 }
 .third{
     width: 100%;
@@ -165,14 +168,14 @@ body{
 .wave{
     margin-top: 0.5em;
     width: 100%;
-    height: 40px;
-    background-color: #122620;
+    height: auto;
+    background-color: #59981a;
     animation: wavy 2s linear  infinite ;
 }
 .wave p{
     text-align: center;
-    color: #D6AD60;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #ecf87f;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 @keyframes wavy {
     0%{
@@ -257,15 +260,15 @@ padding: 0.5em;
     margin-top:1em ;
     width: 100%;
     height: auto;
-    /* background-color: #122620; */
     }
     .di{
         width: fit-content;
         display: flex;
+        font-size: smaller;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: #B68D40;
+        color: #59981A
     }
     .di a:hover {
             color: #0f0557;
@@ -274,12 +277,16 @@ padding: 0.5em;
 .footer{
     width: 100%;
     height: auto;
-    background-color: #F4EBD0;
+    background-color:#dabd34;
     display: flex;
+    border-top-left-radius: 3em;
+    border-top-right-radius: 3em;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-end;
-   
+    box-shadow: -2px 14px 44px 0px rgba(49, 132, 7, 0.75);
+    -webkit-box-shadow: -2px 14px 44px 0px rgba(60, 212, 29, 0.75);
+    -moz-box-shadow: -2px 14px 44px 0px rgba(227,247,15,0.75);
 }
 .fo-actual{
     width: 100%;
@@ -299,19 +306,15 @@ padding: 0.5em;
     justify-content: space-around;
     width: 70%;
 }
-.handles span{
-    color: #B68D40;
-    cursor: pointer;
-}
-.handles span:hover{
-color:#122620;
-}
+
 .own{
 width: fit-content;
 font-family: 'Roboto', sans-serif;
-padding-right: 5px;
+display: flex;
+align-items: center;
 font-weight: bolder;
-color: #bbab04;
+margin: 1px auto;
+color: #3d550c;
 }
 .ack{
     border: 1px solid #B68D40;
@@ -340,13 +343,14 @@ color: #bbab04;
 .fo-actual h4{
     width: 100%;
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-decoration: underline;
-    color: #122620;
+    font-family: cursive;
+    text-decoration:none;
+    color: #3d550c;
 }
 .fo-actual a{
     text-decoration: none;
-    color: #B68D40;
+    font-style: italic;
+    color: #fefffc;
 }
 .fo-actual li{
     list-style-type:square;
@@ -451,4 +455,8 @@ color: #bbab04;
 .space{
     width: 100%;
     height: 4em;
+}
+.small-space{
+    width: 100%;
+    height: 2em;
 }
