--- a/mine.css
+++ b/mine.css
@@ -59,16 +59,15 @@
     padding: 2px;
 }
 .nav-bar li:hover{
-    border: 3px solid #F4EBD0;
+    border: 3px solid #fffffe;
     border-radius: 2%;
     border-top: 0px; border-bottom: 0px;
-    background-color: #D6AD60;
-    color: #122620;
+    background-color: #ecf87f;
     font-weight: bold;
 }
 .nav-bar a{
     text-decoration: none;
-    color: #F4EBD0;
+    color: #ffffff;
 }
 .second{
     width: 100%;
@@ -201,7 +200,6 @@
     flex-direction: row;
     width: 100%;
     height: auto;
-   /* max-height: 10em; */
     justify-content: space-around;
 }
 .p1{
@@ -383,8 +381,8 @@ color: #3d550c;
     justify-content: space-around;
     align-items: center;
     box-shadow: 35px 2px 90px -20px rgb(214, 173, 96, 0.4) inset;
--webkit-box-shadow: 35px 2px 90px -20px rgba(1, 10, 1, 0.47) inset;
--moz-box-shadow: 35px 2px 90px -20px rgb(18, 38, 32, 0.6) inset;
+    -webkit-box-shadow: 35px 2px 90px -20px rgba(1, 10, 1, 0.47) inset;
+    -moz-box-shadow: 35px 2px 90px -20px rgb(18, 38, 32, 0.6) inset;
 }
 .form form{
     width: 100%;
@@ -459,4 +457,35 @@ color: #3d550c;
 .small-space{
     width: 100%;
     height: 2em;
+}
+/* lifestyle section */
+
+.first-life{
+    width: 100%;
+    background-color: #4B5A20;
+    color: #ffffff;
+    height: auto;
+    padding: 0px 0px 3px 0px;
+    position: sticky;
+    top: 0;
+    border-bottom-left-radius: 1em;
+}
+.first-life h1{
+    font-size: larger;
+    width: fit-content;
+    margin: 1px auto;
+}
+.contact-me{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.contact-me a{
+    width: fit-content;
+    text-decoration: none;
+    border: 2px solid #4B5A20;
+    padding: 0px 3px 0px 3px;
+    border-radius: 0.2em;
+    background-color: #DBA40E;
+    color: #ffffff;
 }
