--- a/mine.css
+++ b/mine.css
@@ -53,6 +53,7 @@ font-family: 'Roboto', sans-serif; */
   .body{
     background-color: #0f2a45;
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   .container {
       background: var(--dark);
@@ -66,6 +67,9 @@ font-family: 'Roboto', sans-serif; */
       position: sticky;
       top: 0;
       z-index: 255575;
+  }
+  .menu{
+    display: none;
   }
   .head {
       width: 100%;
@@ -452,86 +456,59 @@ font-family: 'Roboto', sans-serif; */
       color: var(--borders);
   }
 
-  /* contact page css */
-
-  .contact-head {
-      display: flex;
-      flex-direction: row;
-      width: 60%;
-      justify-content: space-around;
-      align-items: center;
-      margin: 1px auto;
-  }
-
-  .img img {
-      max-width: 100px;
-      max-height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-  }
-
   .form {
       width: 60%;
       min-height: 75vh;
       margin: 1px auto;
+      border-radius: 10px;
       display: flex;
-      padding: 0px 0px 5px 0px;
-      border-top-right-radius: 25%;
+      padding: 8px 0px 2px 0px;
       flex-direction: column;
       justify-content: space-around;
       align-items: center;
-      box-shadow: 35px 2px 90px -20px rgb(214, 173, 96, 0.4) inset;
-      -webkit-box-shadow: 35px 2px 90px -20px rgba(1, 10, 1, 0.47) inset;
-      -moz-box-shadow: 35px 2px 90px -20px rgb(18, 38, 32, 0.6) inset;
-  }
-
-  .form form {
-      width: 100%;
-      height: 100%;
-      background-color: transparent;
-      display: flex;
-      flex-direction: column;
-  }
-
-  .myform {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      max-height: 100%;
-  }
+      background-color: var(--nav-after);
+      box-shadow: 30px 2px 50px 20px rgba(216, 215, 212, 0.4);
+      -webkit-box-shadow: 30px 2px 90px -20px rgba(233, 238, 233, 0.47);
+      -moz-box-shadow: 30px 2px 90px -20px rgba(169, 194, 186, 0.6);
+    }
 
   .n,
   .mess,
   .breif {
-      width: 100%;
-      outline: none;
-      border: none;
+      width: 60%;
+      min-height: 35px;
+      border-radius: 3px;
+      padding-left: 5px;
+      outline: 2px solid var(--nav-color);
+      resize: none;
+      box-shadow: 1px 3px 1.5px 2.5px;
+      border: 1.5px dashed var(--nav-after);
+      font-family: var(--OpenSans);
+      transition: all .3s ease-in;
+  }
+  .form input:not(:placeholder-shown),.form textarea:not(:placeholder-shown){
+    border: 3.5px dashed var(--nav-after);
   }
 
-  .mess {
-      max-height: 150px;
-      outline: none;
-      resize: none;
-  }
-
-  .breif {
-      max-height: 120px;
-      outline: none;
-      resize: none;
-  }
+  .breif, .mess {
+      max-height: 125px;
+  } 
 
   .send {
       cursor: pointer;
-      border: 0.2px solid #122620;
+      border: 1.2px solid #122620;
       border-radius: 4px;
       background-color: #F4EBD0;
       color: #122620;
+      font-family: var(--lato);
       font-weight: bold;
-      animation: colorChange 5s ease-in-out 0.1s infinite alternate none;
+      transition: all .4s ease;
   }
-
+.send:hover{
+    transform: scale(1.1);
+    background-color: #0f2a45;
+    color: white;
+}
   .space {
       width: 100%;
       height: 4em;
@@ -542,39 +519,106 @@ font-family: 'Roboto', sans-serif; */
       height: 2em;
   }
 
-  /* lifestyle section */
+  /* responsiveness*/
 
-  .first-life {
-      width: 100%;
-      background-color: #4B5A20;
-      color: #ffffff;
-      height: auto;
-      padding: 0px 0px 3px 0px;
-      position: sticky;
-      top: 0;
-      border-bottom-left-radius: 1em;
+  @media screen and (max-width: 426px) {
+    .head-nav{
+     display: none;
+      }
+      .menu{
+        display: inline;
+        border: 1px solid;
+        outline: none;
+        background-color: transparent;
+        color: white;
+      }
+      .about{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 0.2em;
+    }
+    .h1-manager{
+        width: 60%;
+     }
+     .mylist {
+        width: 100%;
+        margin: auto;
+        background: var(--head-color);
+        border: 2px solid var(--borders);
+        position: relative;
+        border-radius: 0.3rem;
+    }
+    .head h1 {
+        padding: 0;
+        color: var(--wave-color);
+        font-size: 18px;
+        font-family: var(--Roboto);
+        text-align: left;
+        border-right: none;
+         text-shadow: 1px 1px 1.3px;
+  
+    }
+    .show-nav{
+        padding: 3px 0px;
+        margin-right: -15px;
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        list-style-type: none;
+        
+      }
+    
+      .show-nav a{
+        text-decoration: none;
+        color: var(--nav-color);
+        font-size: large;
+        font-family: var(--montserrat);
+        font-weight: 400;
+        padding: 0px 0.5rem 0px 0.5rem;
+        transition: all .4s ease;
+      }
+      .show-nav a:hover{
+        padding: 0px 0.7rem 3px 0.7rem;
+        font-family: var(--playfair);
+        color: var(--nav-after);
+        font-style: italic;
+        border: none;
+        border-top-right-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+        }
+    .hide-backChange, .hide-logo{
+        display: none;
+    }
+    #about-text {
+        width: 90%;
+        text-align: justify;
+        margin: auto;
+        line-height: 1.5rem;
+        font-size: 14px;
+        color: #f5f5f5;
+        font-family: var(--lato);
+        font-weight: 200;
+        text-shadow: 0px 0px 0.5px;
+      }
+    .form{
+        width: 80%;
+    }
+    .n,
+    .mess,
+    .breif {
+        width: 80%;
+    }
+     #showroom{
+        display: none;
+     }
+     .footer{
+        display: none;
+     }
+
   }
-
-  .first-life h1 {
-      font-size: larger;
-      width: fit-content;
-      margin: 1px auto;
-  }
-
-  .contact-me {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-  }
-
-  .contact-me a {
-      width: fit-content;
-      text-decoration: none;
-      border: 2px solid #4B5A20;
-      padding: 0px 3px 0px 3px;
-      border-radius: 0.2em;
-      background-color: #DBA40E;
-      color: #ffffff;
-  }
-
-  /* light and dark mode */
